crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__todo-optional-call-chain-in-optional.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/todo-optional-call-chain-in-optional.ts
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
function useFoo(props) {
	const $ = _c(3);
	const value = props.value;
	let t0;
	if ($[0] !== value?.x || $[1] !== value?.y) {
		t0 = createArray(value?.x, value?.y)?.join(", ");
		$[0] = value?.x;
		$[1] = value?.y;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
}
function createArray<T,>(...t0: Array<T>): Array<T> {
	const args = t0;
	return args;
}
export const FIXTURE_ENTRYPONT = {
	fn: useFoo,
	props: [{ value: null }]
};
