crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__try-catch-try-value-modified-in-catch.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/try-catch-try-value-modified-in-catch.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
const { throwInput } = require("shared-runtime");
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props) {
		t0 = Symbol.for("react.early_return_sentinel");
		bb0: {
			try {
				const y = [];
				y.push(props.y);
				throwInput(y);
			} catch (t1) {
				const e = t1;
				e.push(props.e);
				t0 = e;
				break bb0;
			}
		}
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	if (t0 !== Symbol.for("react.early_return_sentinel")) {
		return t0;
	}
	return null;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		y: "foo",
		e: "bar"
	}]
};
